# spp

./: .gitignore  CMakeLists.txt  Makefile  alloc1.h  async.h  asyncio.h  box.h  format.h  format1.h  limits.h  log.h  map.h  net.h  profile.h  ref0.h  storage.h  thread.h  thread0.h  variant.h  vmath.h
.github/workflows/: ci.yml
app/: README.md
app/examples/: okx_demo.cpp  ticker_dump.cpp
app/mcp/: handler.h  server.cpp
app/tests/: api.cpp  async_client.cpp  backtest_engine.cpp  bar_aggregator.cpp  chan_live.cpp  fanout.cpp  filter_round.cpp  live_driver.cpp  models.cpp  okx_adapter.cpp  okx_api.cpp  okx_driver_wal.cpp  okx_live_driver.cpp  okx_market_stream.cpp  okx_signer.cpp  okx_time_sync.cpp  okx_user_stream.cpp  okx_ws_session.cpp  (+7 more)
autoresearch-spp-systemlib/: changelog.md  dashboard.html  results.json  results.tsv  task_plan.baseline.md
bench/: baseline.tsv  thresholds.tsv
docs/: async_runtime_gap_audit.md  binance_integration.md  io_capability_matrix.md  perf_memory_baseline.md  spp_design.md  task_plan.md
examples/: smoke.cpp
impl/: alloc.cpp  base.cpp  log.cpp  math.cpp  profile.cpp  simd.cpp  vmath.cpp
pos/: async_bsd.cpp  async_pos.cpp  asyncio_bsd.cpp  asyncio_pos.cpp  files_pos.cpp  net_pos.cpp  thread_pos.cpp  unify.cpp
skills/: README-spp-skill.md
std/: initializer_list.h
tests/: CMakeLists.txt  allocator.cpp  arrays.cpp  coro.cpp  format.cpp  function.cpp  net.cpp  pointers.cpp  pool.cpp  range_allocator.cpp  simd.cpp  static.cpp  test.h  thread.cpp  tuple.cpp  variant.cpp  vmath.cpp
tools/: bench_baseline.sh  bench_check.sh  deploy_okx.sh
w32/: async_w32.cpp  asyncio_w32.cpp  files_w32.cpp  net_w32.cpp  thread_w32.cpp  w32_util.cpp  w32_util.h
(+302 files in other folders)
